# IPFSEthereumCLI

./: Cargo.toml  README.md
contracts/: contract.sol
src/: contract.rs  main.rs  network.rs  storage.rs
tests/: cli.rs
