[package]
name = "ipfs-contract"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.64"
clap = { version = "4.1.4", features = ["derive"] }
ethers = { version = "1.0.0", features = ["ethers-solc"] }
ipfs-api-backend-hyper = "0.6"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.64"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0.7"
predicates = "2.1.5"